--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "pnpm start",
+    "build": "pnpm build",
+    "test": "pnpm test"
   },
   "eslintConfig": {
     "extends": [
