--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "tsc": "^2.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "pnpm start",
-    "build": "pnpm build",
-    "test": "pnpm test"
+    "start": "pnpm i && react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -35,8 +37,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
