--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "script": "ts-node -P tsconfig.server.json index.ts"
+    "script": "ts-node -P tsconfig.server.json /server/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "heic-convert": "^2.1.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
@@ -28,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/heic-convert": "^2.1.0",
     "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
