--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^16.4.5",
     "heic-convert": "^2.1.0",
     "lucide-react": "^0.395.0",
-    "next": "14.2.4",
+    "next": "^14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
