--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "vercel-dev": "vercel dev",
     "build": "tsc -b && vite build",
     "lint": "biome lint .",
     "format": "biome format . --write",
@@ -17,10 +18,13 @@
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.3",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4"
   },
@@ -30,6 +34,7 @@
     "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vercel/node": "^5.1.15",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -38,6 +43,8 @@
     "tw-animate-css": "^1.2.8",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vercel": "^41.7.0",
+    "vite": "^6.3.1",
+    "vite-plugin-vercel-api": "^0.4.0"
   }
 }
